--- a/website2/app/src/routes/settings/settings.css
+++ b/website2/app/src/routes/settings/settings.css
@@ -21,7 +21,7 @@ footer.success {
 		border-radius: 3px;
 }
 
-fieldset {
+fieldset.vertical {
 	border: none;
 	display: flex;
 	flex-direction: column;
