--- a/website2/app/src/styles/toggle-links.css
+++ b/website2/app/src/styles/toggle-links.css
@@ -10,9 +10,12 @@
 	margin: 0.25rem auto 0.25rem auto;
 }
 
-.toggle-links a {
-	background: var(--ui);
+.toggle-links a, .toggle-links a:visited {
 	color: var(--color);
+}
+
+.toggle-links a {
+	background: var(--ui-toggle-unchecked-background);
 	text-align: center;
 	padding: 0.25rem 0.25rem;
 	cursor: pointer;
@@ -25,6 +28,8 @@
 	width: auto;
 	max-width: min(300px, 40vw);
 	text-decoration: none;
+	transition: border-color 0.15s ease-out, color 0.25s ease-out,
+			background-color 0.15s ease-out, box-shadow 0.15s ease-out;
 }
 
 .toggle-links a:first-of-type {
@@ -36,12 +41,6 @@
 	border-right: 1px solid var(--ui-toggle-checked-background);
 	border-top-right-radius: var(--border-radius);
 	border-bottom-right-radius: var(--border-radius);
-}
-
-.toggle-links a {
-	background: var(--ui-toggle-unchecked-background);
-	transition: border-color 0.15s ease-out, color 0.25s ease-out,
-		background-color 0.15s ease-out, box-shadow 0.15s ease-out;
 }
 
 .toggle-links a.current {
